--- a/css/style.css
+++ b/css/style.css
@@ -17,39 +17,71 @@ main {
 }
 .container {
     display: grid;
-    grid: auto-flow / repeat(2, 300px);
+    grid: auto-flow / repeat(2, 400px);
     gap: 10px;
     margin-bottom: 20px;
 }
 .box {
-    border: 1px solid black;
+    border: 3px solid black;
     aspect-ratio: 1;
     padding: 25px;
+    overflow: auto;
 }
 .box > * {
     margin-bottom: 10px;
 }
+.box > *:hover {
+    border: 2px solid orange;
+}
+#create {
+    font-size: 17px;
+    color: white;
+    background-color: green;
+    border: 1px solid black;
+    border-radius: 5px;
+    letter-spacing: 1px;
+}
 .created:not(h1) {
-    border: 2px solid #444;
     border-radius: 1px;
     display: block;
 }
 div.created {
-    min-height: 100px;
+    border: 2px solid #444;
+    min-height: 80px;
+    padding: 20px;
+    position: relative;
 } 
 p.created {
-    min-height: 100px;
+    width: 100%;
+    min-height: 40px;
+    padding-top: 8px;
+    text-align: center;
+    position: relative;
 }
 h1.created {
-    min-height: 30px;
-    background: #cecece;
+    width: 100%;
+    min-height: 40px;
+    text-align: center;
+    position: relative;
 }  
 input.created {
     min-height: 40px;
+    padding-left: 10px;
+    width: 100%;
 }
 span.created {
-    min-height: 60px;
+    width: 100%;
+    min-height: 40px;
+    text-align: center;
+    padding-top: 10px;
+    position: relative;
 }  
 .dragging.dragging {
     border-color: orange;
+}
+pre {
+    position: absolute;
+    font-size: 12px;
+    top: 0;
+    left: 0;
 }
